[gd_scene load_steps=5 format=2]

[ext_resource path="res://client/main_menu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/main_menu/vr/VrClientMainMenuUi.gd" type="Script" id=2]
[ext_resource path="res://client/main_menu/vr/SettingsDialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/content/ImportantContentFont.tres" type="DynamicFont" id=4]

[node name="MainMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )
settingsDialogPath = NodePath("SettingsDialog")
vrModeLabelPath = NodePath("VrModeLabel")
driverLabelPath = NodePath("InfoContainer/DriverLabel")
debugButtonPath = NodePath("OptionsContainer/DebugButton")

[node name="SettingsButton" type="Button" parent="OptionsContainer" index="1"]
margin_top = 45.0
margin_right = 160.0
margin_bottom = 82.0
text = "Settings"

[node name="HelpButton" parent="OptionsContainer" index="2"]
margin_top = 90.0
margin_bottom = 127.0

[node name="DebugButton" type="Button" parent="OptionsContainer" index="3"]
margin_top = 135.0
margin_right = 160.0
margin_bottom = 172.0
text = "debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsDialog" parent="." index="7" instance=ExtResource( 3 )]
visible = false

[node name="GodotLogo" parent="InfoContainer" index="0"]
margin_right = 65.0

[node name="VersionLabel" parent="InfoContainer" index="1"]
margin_right = 65.0

[node name="DriverLabel" type="Label" parent="InfoContainer" index="2"]
margin_top = 105.0
margin_right = 65.0
margin_bottom = 130.0
text = "driver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VrModeLabel" type="Label" parent="." index="13"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -8.0
margin_right = 190.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
text = "VR Mode: Standing"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OptionsContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="OptionsContainer/DebugButton" to="." method="_on_DebugButton_pressed"]
